[package]
name = "gdkx11"
license = "MIT"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["gdkx11", "gdk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "http://gtk-rs.org/docs/gdkx11/"
version = "0.9.0"
description = "Rust bindings for the GDK X11 library"
repository = "https://github.com/gtk-rs/gdk-x11"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/gdkx11", service = "github" }
travis-ci = { repository = "gtk-rs/gdkx11" }

[lib]
name = "gdkx11"

[features]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/embed-lgpl-docs"]
dox = ["gdk/dox"]
v3_16 = ["gdkx11-sys/v3_16", "gdk/v3_16"]
v3_22 = ["v3_16", "gdk/v3_22"]
v3_24 = ["v3_22", "gdkx11-sys/v3_24_2"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1"
optional = true

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
x11 = "2.18"
gdkx11-sys = "0.10.0"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"
gio-sys = "0.10.0"
gdk-sys = "0.10.0"
gdk-pixbuf-sys = "0.10.0"
glib = "0.10.0"
pango = "0.9.0"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
gio = "0.9.0"

[dev-dependencies]
gir-format-check = "^0.1"
